# kaleidoscope

./: .gitignore  .travis.yml  LICENSE-MIT  Makefile  README.md  default.nix  deploy.sh  kaleidoscope.cabal  page.tmpl  preprocessor.hs  stack.yaml  style.css  tutorial.md
css/: bootstrap-2.1.0.css  style.css
img/: compiler.dot
src/chapter1/: minimal.ll  simple.ll
src/chapter2/: Lexer.hs  Main.hs  Parser.hs  Syntax.hs  chapter2.k
src/chapter3/: Codegen.hs  Emit.hs  Lexer.hs  Main.hs  Syntax.hs  chapter3.k
src/chapter4/: Codegen.hs  Emit.hs  JIT.hs  Lexer.hs  Parser.hs  Syntax.hs  cbits.c  chapter4.k
src/chapter5/: Codegen.hs  Emit.hs  Lexer.hs  Main.hs  Parser.hs  Syntax.hs  chapter5.k
src/chapter6/: Codegen.hs  Emit.hs  JIT.hs  Lexer.hs  Main.hs  Parser.hs  Syntax.hs  cbits.c  chapter6.k
src/chapter7/: Codegen.hs  Emit.hs  JIT.hs  Lexer.hs  Main.hs  Parser.hs  Syntax.hs  chapter7.k
tools/: preprocessor.hs
