name:                kaleidoscope
version:             0.1.0.0
synopsis:            Haskell port of LLVM Kaleidoscope tutorial
description:         Port of the Kaleidoscope tutorial for Haskell and LLVM
homepage:            https://github.com/sdiehl/kaleidoscope
license:             MIT
license-file:        LICENSE-MIT
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2012 Stephen Diehl
Category:            Compilers
build-type:          Simple
cabal-version:       >=1.10
Bug-Reports:         https://github.com/sdiehl/kaleidoscope/issues

Flag Tutorial
  Description: Compile with pandoc preprocessor
  Default:     False

Source-Repository head
    Type: git
    Location: git@github.com:sdiehl/kaleidoscope.git

executable chapter2
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules: 
    Parser
    Syntax
    Lexer
  build-depends:
      base                 >= 4.6 && <4.10
    , haskeline            >= 0.7.1.2
    , llvm-general         >= 3.5.0.0
    , llvm-general-pure    >= 3.5.0
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
  hs-source-dirs:      src/chapter2

executable chapter3
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:
    Codegen
    Emit
    Lexer
    Parser
    Syntax

  build-depends:
      base                 >= 4.6 && <4.10
    , haskeline            >= 0.7.1.2
    , llvm-general         >= 3.5.0.0
    , llvm-general-pure    >= 3.5.0
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
    , containers           >= 0.4
  hs-source-dirs:      src/chapter3

executable chapter4
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:
    Codegen
    Emit
    JIT
    Lexer
    Parser
    Syntax

  build-depends:
      base                 >= 4.6 && <4.10
    , haskeline            >= 0.7.1.2
    , llvm-general         >= 3.5.0.0
    , llvm-general-pure    >= 3.5.0
    , parsec               >= 3.1
    , containers           >= 0.4
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
  hs-source-dirs:      src/chapter4

executable chapter5
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:
    Codegen
    Emit
    JIT
    Lexer
    Parser
    Syntax

  build-depends:
      base                 >= 4.6 && <4.10
    , haskeline            >= 0.7.1.2
    , llvm-general         >= 3.5.0.0
    , llvm-general-pure    >= 3.5.0
    , parsec               >= 3.1
    , containers           >= 0.4
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
  hs-source-dirs:      src/chapter5

executable chapter6
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:
   Codegen
   Emit
   JIT
   Lexer
   Parser
   Syntax

  build-depends:
      base                 >= 4.6 && <4.10
    , haskeline            >= 0.7.1.2
    , llvm-general         >= 3.5.0.0
    , llvm-general-pure    >= 3.5.0
    , parsec               >= 3.1
    , containers           >= 0.4
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
  hs-source-dirs:      src/chapter6

executable chapter7
  default-language:    Haskell2010
  main-is:             Main.hs
  other-modules:
    Codegen
    Emit
    JIT
    Lexer
    Parser
    Syntax

  build-depends:
      base                 >= 4.6 && <4.10
    , haskeline            >= 0.7.1.2
    , llvm-general         >= 3.5.0.0
    , llvm-general-pure    >= 3.5.0
    , parsec               >= 3.1
    , containers           >= 0.4
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
  hs-source-dirs:      src/chapter7

library
  default-language:    Haskell2010
  build-depends:
      base                 >= 4.6 && <4.10
    , haskeline            >= 0.7.1.2
    , llvm-general         >= 3.5.0.0
    , llvm-general-pure    >= 3.5.0
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
