cabal-version: >=1.10
name:          kaleidoscope
version:       0.1.0.0
license:       MIT
license-file:  LICENSE-MIT
copyright:     2012-2020 Stephen Diehl
maintainer:    stephen.m.diehl@gmail.com
author:        Stephen Diehl
homepage:      https://github.com/sdiehl/kaleidoscope
bug-reports:   https://github.com/sdiehl/kaleidoscope/issues
synopsis:      Haskell port of LLVM Kaleidoscope tutorial
description:   Port of the Kaleidoscope tutorial for Haskell and LLVM
category:      Compilers
build-type:    Simple

source-repository head
  type:     git
  location: git@github.com:sdiehl/kaleidoscope.git

executable chapter2
  main-is:          Main.hs
  hs-source-dirs:   src/chapter2
  other-modules:
    Lexer
    Parser
    Syntax

  default-language: Haskell2010
  build-depends:
      base          >=4.7     && <5
    , haskeline     >=0.7.1.2 && <0.8
    , llvm-hs       >=9.0.0   && <10.0.0
    , llvm-hs-pure  >=9.0.0   && <10.0.0
    , mtl           >=2.1.3   && <2.3
    , parsec        >=3.1     && <3.2
    , transformers  >=0.3.0.0 && <0.6

executable chapter3
  main-is:          Main.hs
  hs-source-dirs:   src/chapter3
  other-modules:
    Codegen
    Emit
    Lexer
    Parser
    Syntax

  default-language: Haskell2010
  build-depends:
      base          >=4.7     && <5
    , containers    >=0.4     && <0.7
    , haskeline     >=0.7.1.2 && <0.8
    , llvm-hs       >=9.0.0   && <10.0.0
    , llvm-hs-pure  >=9.0.0   && <10.0.0
    , mtl           >=2.1.3   && <2.3
    , parsec        >=3.1     && <3.2
    , transformers  >=0.3.0.0 && <0.6

executable chapter4
  main-is:          Main.hs
  hs-source-dirs:   src/chapter4
  other-modules:
    Codegen
    Emit
    JIT
    Lexer
    Parser
    Syntax

  default-language: Haskell2010
  build-depends:
      base          >=4.7     && <5
    , containers    >=0.4     && <0.7
    , haskeline     >=0.7.1.2 && <0.8
    , llvm-hs       >=9.0.0   && <10.0.0
    , llvm-hs-pure  >=9.0.0   && <10.0.0
    , mtl           >=2.1.3   && <2.3
    , parsec        >=3.1     && <3.2
    , transformers  >=0.3.0.0 && <0.6

executable chapter5
  main-is:          Main.hs
  hs-source-dirs:   src/chapter5
  other-modules:
    Codegen
    Emit
    JIT
    Lexer
    Parser
    Syntax

  default-language: Haskell2010
  build-depends:
      base          >=4.7     && <5
    , containers    >=0.4     && <0.7
    , haskeline     >=0.7.1.2 && <0.8
    , llvm-hs       >=9.0.0   && <10.0.0
    , llvm-hs-pure  >=9.0.0   && <10.0.0
    , mtl           >=2.1.3   && <2.3
    , parsec        >=3.1     && <3.2
    , transformers  >=0.3.0.0 && <0.6

executable chapter6
  main-is:          Main.hs
  hs-source-dirs:   src/chapter6
  other-modules:
    Codegen
    JIT
    Lexer
    Parser
    Syntax

  default-language: Haskell2010
  build-depends:
      base            >=4.7     && <5
    , bytestring      >=0.10    && <0.11
    , containers      >=0.4     && <0.7
    , directory       >=1.3     && <1.4
    , haskeline       >=0.7.1.2 && <0.8
    , llvm-hs         >=9.0.0   && <10.0.0
    , llvm-hs-pretty  >=0.9     && <0.10
    , llvm-hs-pure    >=9.0.0   && <10.0.0
    , mtl             >=2.1.3   && <2.3
    , parsec          >=3.1     && <3.2
    , pretty-simple   >=3.2.0.0 && <3.3
    , text            >=1.2     && <1.3
    , transformers    >=0.3.0.0 && <0.6

executable chapter7
  main-is:          Main.hs
  hs-source-dirs:   src/chapter7
  other-modules:
    Codegen
    Emit
    JIT
    Lexer
    Parser
    Syntax

  default-language: Haskell2010
  build-depends:
      base          >=4.7     && <5
    , containers    >=0.4     && <0.7
    , haskeline     >=0.7.1.2 && <0.8
    , llvm-hs       >=9.0.0   && <10.0.0
    , llvm-hs-pure  >=9.0.0   && <10.0.0
    , mtl           >=2.1.3   && <2.3
    , parsec        >=3.1     && <3.2
    , transformers  >=0.3.0.0 && <0.6
